--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="header_main_area">
+                <div class="logo"></div>
+                <nav class="navbar-area">
+
+                </nav>
+                div.
+            </div>
+        </div>
+    </header>
 
 
 
