--- a/index.html
+++ b/index.html
@@ -142,7 +142,58 @@
 
         <!-- header navbar bar start-->
         <div class="header_bottom_area">
-           div.hea
+           <div class="header-bottom">
+            <nav>
+                <ul>
+                    <li>
+                        <a class="active" href="#">home</a>
+                      
+                    </li>
+                    <li>
+                        <a href="#">household items</a>
+                      
+                    </li>
+                    <li>
+                        <a href="#">grocery</a>
+                    </li>
+                    <li>
+                        <a href="#">mobile accessories</a>
+                    </li>
+                    <li>
+                        <a href="#">fashion</a>
+                    </li>
+                    <li>
+                        <a href="#">electric</a>
+                    </li>
+                    <li>
+                        <a href="#">hardware</a>
+                    </li>
+                    <li>
+                        <a href="#">mobile accessories</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="submenu-item-area">
+                <div class="left">
+                    <ul>
+                        <li>
+                            <a href="#">electronics</a>
+                        </li>
+                        <li>
+                            <a href="#">furniture</a>
+                        </li>
+                        <li>
+                            <a href="#">kittchen</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right">
+                    <div class="navitem-img">
+                        <img src="assets/images/electronics-item/refrigerator.png" alt="">
+                    </div>
+                </div>
+            </div>
+           </div>
         </div>
         <!-- header navbar bar end-->
     </header>
